--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,11 @@
   {% include analytics.html %}
   {% include analytics-piwik.html %}
   <script type="text/javascript" src="{{ site.baseurl }}/script.js"></script>  
-
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js');
+    };
+  </script> 
+ 
 </body>
 </html>
