--- a/_includes/analytics-piwik.html
+++ b/_includes/analytics-piwik.html
@@ -1,5 +1,5 @@
 {% if site.piwik_analytics %}
     <!-- Piwik -->
-    <noscript><p><img src="//quassy.rasalhague.uberspace.de/piwik/piwik.php?idsite=13" style="border:0;" alt="" /></p></noscript>
+    <noscript><p><img src="//qxy.uber.space/piwik/piwik.php?idsite=13" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
 {% endif %}
